--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,7 @@
+
+
 @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;500&display=swap");
+
 body {
   font-family: "Josefin Sans", sans-serif;
   font-size: 13px;
@@ -6,7 +9,6 @@ body {
   color: #8184a1;
   line-height: 1.3;
 }
-
 h4 {
   margin-top: 0;
   margin-bottom: 20px;
@@ -21,14 +23,12 @@ h4 {
   justify-content: center;
   align-items: center;
 }
-
 .quantity {
   display: flex;
   align-items: center;
   justify-content: center;
   padding: 0;
 }
-
 .quantity__minus,
 .quantity__plus {
   display: block;
@@ -41,22 +41,18 @@ h4 {
   line-height: 33px;
   font-size: 20px;
 }
-
 .quantity__minus:hover,
 .quantity__plus:hover {
   background: #575b71;
   color: #fff;
   cursor: pointer;
 }
-
 .quantity__minus {
   border-radius: 3px 0 0 3px;
 }
-
 .quantity__plus {
   border-radius: 0 3px 3px 0;
 }
-
 .quantity__input {
   width: 42px;
   height: 29px;
@@ -69,4 +65,4 @@ h4 {
   border-right: 2px solid #dee0ee;
   background: #fff;
   color: #8184a1;
-}/*# sourceMappingURL=App.css.map */
+}
